--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -25,3 +25,40 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes steam-move-01 {
+  0% {
+    filter: blur(12px);
+    transform: translateX(0px) translateY(0px) scale(0.8, 0.8) rotateY(0deg);
+    opacity: 0;
+    bottom: -1300px;
+  }
+  6% {
+    filter: blur(10px);
+    opacity: 0.2;
+  }
+  33% {
+    filter: blur(20px);
+    transform: translateX(30px) translateY(100px) scale(0.9, 1.1) rotateY(30deg);
+    opacity: 0.4;
+  }
+  66% {
+    transform: translateX(-20px) translateY(200px) scaleY(1, 0.8) rotateY(4deg);
+  }
+  100% {
+    filter: blur(18px);
+    transform: translateX(50px) translateY(300px) scaleY(1.5, 1.3) rotateY(50deg);
+    opacity: 0;
+    bottom: 0;
+  }
+}
+
+
+.steam-01 {
+  position: absolute;
+  left: calc(50% - 400px);
+  bottom: 0; /* 湯気が下から上がるため */
+  -webkit-animation: steam-move-01 20s infinite linear;
+  animation: steam-move-01 10s infinite linear;
+  z-index: -1;
+}
