--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -28,25 +28,27 @@ body {
 
 @keyframes steam-move-01 {
   0% {
-    filter: blur(12px);
+    filter: blur(30px);
     transform: translateX(0px) translateY(0px) scale(0.8, 0.8) rotateY(0deg);
     opacity: 0;
-    bottom: -1300px;
+    bottom: -300px;
   }
   6% {
-    filter: blur(10px);
+    filter: blur(30px);
     opacity: 0.2;
   }
   33% {
-    filter: blur(20px);
+    filter: blur(30px);
     transform: translateX(30px) translateY(100px) scale(0.9, 1.1) rotateY(30deg);
-    opacity: 0.4;
+    opacity: 0.3;
   }
   66% {
+    filter: blur(30px);
     transform: translateX(-20px) translateY(200px) scaleY(1, 0.8) rotateY(4deg);
+    opacity: 0.1;
   }
   100% {
-    filter: blur(18px);
+    filter: blur(40px);
     transform: translateX(50px) translateY(300px) scaleY(1.5, 1.3) rotateY(50deg);
     opacity: 0;
     bottom: 0;
@@ -56,9 +58,11 @@ body {
 
 .steam-01 {
   position: absolute;
-  left: calc(50% - 400px);
+  width: 100%;
+  height: 100%;
+  left: 0;
   bottom: 0; /* 湯気が下から上がるため */
   -webkit-animation: steam-move-01 20s infinite linear;
-  animation: steam-move-01 10s infinite linear;
+  animation: steam-move-01 20s infinite linear;
   z-index: -1;
 }
